# ElasticCircularQueue

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ElasticCircularQ.h
src/: ElasticCircularQ.cpp  ElasticCircularQ.sln  ElasticCircularQ.vcxproj  testq.cpp
